templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-born
    cert-manager.io/issue-temporary-certificate: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  rules:
    - host: mix.bembel.party
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mix.bembel.party
      secretName: frontend-tls
